--- a/FotografPaylasmaUygulamasi/Info.plist
+++ b/FotografPaylasmaUygulamasi/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Görsel seçmek için izin verin.</string>
 </dict>
 </plist>
